--- a/dotNet5783_6686_9339/PL/PL.csproj
+++ b/dotNet5783_6686_9339/PL/PL.csproj
@@ -16,6 +16,7 @@
     <None Remove="5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
     <None Remove="admin option\5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
     <None Remove="logo.jpg" />
+    <None Remove="Order\5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
     <None Remove="PHOTO-2023-01-11-22-54-21.jpg" />
     <None Remove="Prudoct\5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
   </ItemGroup>
@@ -28,6 +29,7 @@
     <Resource Include="5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
     <Resource Include="admin option\5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
     <Resource Include="logo.jpg" />
+    <Resource Include="Order\5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
     <Resource Include="PHOTO-2023-01-11-22-54-21.jpg" />
     <Resource Include="Prudoct\5bcac630-8e8f-4262-9938-83ef4947ad98.jpg" />
   </ItemGroup>
